--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+server.port=8090
 
+spring.jpa.show-sql=true
+
+spring.datasource.platform=h2
+spring.h2.console.path=/h2
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:resume
+#;DB_CLOSE_DELAY=-1
+
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.datasource.data-username=sa
+spring.datasource.data-password=
