--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8090
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 spring.datasource.platform=h2
 spring.h2.console.path=/h2
